[package]
name = "titanrt-solana"
version = "0.1.0"
edition = "2024"

[dependencies]
titanrt = { version = "0.2.2", features = ["connector"] }
anyhow = "1.0.99"
tokio = { version = "1.47.1", features = ["time", "rt", "net", "macros"] }
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
rand = "0.9.2"
rustls = { version = "0.23.31", default-features = false, features = ["ring"] }

[target.'cfg(not(windows))'.dependencies]
yellowstone-grpc-client = { version = "9.0.0" }
yellowstone-grpc-proto = { version = "9.0.0" }
